changed the HTML and CSS of the popup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
 </head>
 <body>
   <button>hit me</button>
+
+  <!-- add this below code to popup.html -->
+  <div class="popup-container">
+    <header class="popup-button-container">
+      <button id="inject" class='popup-button'>PLAY!!</button>
+      <button id="spawn" class='popup-button'>Spawn Pokemon</button>
+    </header>
+    <div class="pokemon-inventory-container">
+      <div class="pokemon-container">
+       <img class="pokemon-in-inventory" src="https://i.pinimg.com/originals/16/17/e6/1617e654042c91da3a2f9145ffd36e97.gif">
+      </div>
+      <div class="pokemon-stats">
+        <h3 class="pokemon-level">Level:</h3>
+        <h3 class="pokemon-experience">Experience:</h3>
+        <h3 class="pokemon-hp">HP:</h3>
+        <h3 class="pokemon-attack">Attack:</h3>
+      </div>
+    </div>
+  </div>
+  <!-- add above code to popup.html -->
+
 </body>
+<script src="./scripts/popup.js"></script>
 <script src="main.js"></script>
 </html>
